Revision history for Perl module Dackup:

0.35
     - allow copying from SSH to Filesystem
     - ignore symbolic links when copying from SSH
     - require new release of CloudFiles

0.34 Thu Feb 26 08:05:20 GMT 2009
     - add README file
     - add dry_run option
     - put messages in the progressbar instead of warning
     - fix bug where no new files over ssh would cause hang
     - add verbose option
     - fix bug with ssh transport and filenames containing spaces 
       and quotes
     - for ssh transport, use Perl instead of stat / find / xargs

0.33 Tue Feb 17 21:07:34 CST 2009
     - initial release