@@ -4,6 +4,7 @@ Revision history for Perl module Dackup:
      - allow copying from SSH to Filesystem
      - ignore symbolic links when copying from SSH
      - require new release of CloudFiles
+     - more accurate progress bar
 
 0.34 Thu Feb 26 08:05:20 GMT 2009
      - add README file
